# SimpleScheduleDiscordBot

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: CHANGELOG.md  DESIGN.md  MODULES.md  README.md  TASK.md
docs/discorddoc/: README.md
docs/discorddoc/01_getting_started/: 01_introduction.md  02_prerequisites.md  03_bot_setup.md
docs/discorddoc/02_basic_concepts/: 01_initialization.md  02_events.md  03_commands.md
docs/discorddoc/03_interactive_features/: 01_message_components.md  02_ui_elements.md  03_interactions.md
docs/discorddoc/04_development/: 01_project_structure.md  02_cogs.md  03_error_handling.md
src/simple_schedule_bot/: __init__.py  main.py
src/simple_schedule_bot/commands/: __init__.py  ping.py  schedule.py
src/simple_schedule_bot/core/: __init__.py  config.py  exceptions.py  logger.py
src/simple_schedule_bot/db/: database.py  repository.py
src/simple_schedule_bot/models/: schedule.py
src/simple_schedule_bot/views/: __init__.py  calendar.py  modals.py
tests/test_models/: test_schedule.py
